2005-06-09  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.12.modules (gthumb): add gthumb.  Patch from
	Jaap A. Haitsma <jaap@haitsma.org> (fixes bug #305860).
	(fast-user-switch-applet): add module.  Patch from Jaap A. Haitsma
	<jaap@haitsma.org> (fixes bug #306538).
	(gnome-power): add module.  Patch from Jaap A. Haitsma
	<jaap@haitsma.org> (fixes bug #306539).

2005-04-29  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* jhbuild/modtypes/tarball.py (do_unpack, do_patch):
	Handle spaces in file. Closes bug #302475.

2005-04-28  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-2.12.modules (nautilus-open-terminal): Add
	module. (fixes bug #302316).

2005-06-09  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.12.modules (rhythmbox): use CVS tree, since
	the arch archive has been abandoned (fixes bug #306890).

2005-06-08  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.12.modules (glib, pango, gtk+): release team
	wiki pages say we are using HEAD, so remove the branch tags.  Also
	add "cairo" as a dependency of pango and gtk+.

2005-06-02  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* jhbuild/modtypes/gcjmodule.py (GCCCVSRoot.update): Check out all
	of gcc.

2005-06-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* modulesets/gnome-2.12.modules: use HEAD for libgda.

2005-05-29  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome-2.12.modules: use --enable-more-warnings=no
	to get this to build with gcc4.

2005-05-27  Johan Dahlin  <jdahlin@async.com.br>
	
	* modulesets/freedesktop.modules:
	* modulesets/gnome-2.10.modules:
	* modulesets/gnome28.modules:

	Created dbus-0-23 and hal-0-4 modules. Changed dbus and hal to point
	at cvs head and gnome 2.8/2.10 to depend on the old versions.
	This should fix the gnome-volume-manager build for 2.12.

2005-05-26  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: gtksourceview:
	Use --enable-compile-warnings=maximum, instead of 